# jp106-ble-keyboard

./: .gitignore  CMakeLists.txt  README.md  hog_keyboard.gatt  pico_sdk_import.cmake  ws2812.pio
docs/: DEVELOPMENT_GUIDE.md  INSTALLATION_GUIDE.md  WIRING_GUIDE.md
include/: ble_hid.h  btstack_config.h  device_slot.h  hid_keycodes.h  keyboard_matrix.h  keymap.h  project_config.h  trackball.h  ws2812_led.h
src/: ble_hid.c  device_slot.c  keyboard_matrix.c  keymap.c  main.c  trackball.c  ws2812_led.c
